--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,10 @@ spring.thymeleaf.cache=false
 #===========================================datasource & mybatis========================================================
 #datasource
 #springboot默认使用HikariPool连接池
-spring.datasource.url=jdbc:mysql://118.25.95.75:3306/test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://tengxun:3306/test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=203080123
+spring.datasource.password=xxxxxxxxxx
 #默认值10
 spring.datasource.hikari.maximum-pool-size=10
 #默认值10
