--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.profiles.active=dev
 server.port=8080
 #server.address=
 #server.error.path=
+#server.servlet.context-path=
 #===============================================thymeleaf====================================================
 #在构建URL时预先查看名称的前缀
 spring.thymeleaf.prefix=classpath:/templates/
