--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,14 @@ spring.datasource.hikari.minimum-idle=10
 #mybatis
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+
+#===========================================logger========================================================
+#只要配置如下日志，其他地方都不需要，包括mybatis-config.xml中的<setting name="logImpl" value="STDOUT_LOGGING"/>
+logging.level.root=info
+#打印dao sql
+logging.level.com.zykj.springboot_example.dao=debug
+#打印请求 响应数据
+logging.level.web=debug
+#配置file
+#logging.path=
+#logging.file=
