--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -67,7 +67,7 @@ log4j.appender.C.layout=org.apache.log4j.PatternLayout
 #		1) c：指定输出category的名称，最小的长度是20，如果category的名称长度小于20的话，默认的情况下右对齐。
 #		2)%-20c："-"号表示左对齐。
 #		3)%.30c：指定输出category的名称，最大的长度是30，如果category的名称长度大于30的话，就会将左边多出的字符截掉，但小于30的话也不会补空格。
-#log4j.appender.C.layout.ConversionPattern=[%-5p] %d thread:%t method:%l %n %m %n
+#log4j.appender.C.layout.ConversionPattern=[%d{yyyy/MM/dd HH:mm:ss}] [Thread:%t] [Method:%l] [%p]:%m%n
 log4j.appender.C.layout.ConversionPattern=%m %n
 #输出到文件中
 log4j.appender.errorFile=org.apache.log4j.DailyRollingFileAppender
